--- a/views/registration/registration.ejs
+++ b/views/registration/registration.ejs
@@ -17,27 +17,29 @@
     <!-- fieldsets -->
     <fieldset>
         <h2 class="fs-title">Personal Details</h2>
-        <h3 class="fs-subtitle">We will never sell it</h3>
+        <h3 class="fs-subtitle"></h3>
         <input type="text" name="fname" placeholder="First Name" />
         <input type="text" name="lname" placeholder="Last Name" />
+        <input type="text" name="mname" placeholder="Middle Name" />
         <input type="text" name="phone" placeholder="Phone" />
-        <textarea name="address" placeholder="Address"></textarea>
-        
+        <input type="text" name="deposit" placeholder="Initial Deposit" />
       </fieldset>
 
     <fieldset>
-      <h2 class="fs-title">Create your account</h2>
-      <h3 class="fs-subtitle">This is step 1</h3>
+      <h2 class="fs-title">Email and Password</h2>
+      <h3 class="fs-subtitle"></h3>
       <input type="text" name="email" placeholder="Email" />
       <input type="password" name="pass" placeholder="Password" />
       <input type="password" name="cpass" placeholder="Confirm Password" />
+      
     </fieldset>
     <fieldset>
-      <h2 class="fs-title">Social Profiles</h2>
-      <h3 class="fs-subtitle">Your presence on the social network</h3>
-      <input type="text" name="twitter" placeholder="Twitter" />
-      <input type="text" name="facebook" placeholder="Facebook" />
-      <input type="text" name="gplus" placeholder="Google Plus" />
+      <h2 class="fs-title">Address</h2>
+      <h3 class="fs-subtitle"></h3>
+      <input type="text" name="state" placeholder="State" />
+      <input type="text" name="city" placeholder="City" />
+      <input type="text" name="streetname" placeholder="Street Name" />
+      <input type="text" name="zipcode" placeholder="zip Code" />
       <a href="https://twitter.com/GoktepeAtakan" class="submit action-button" target="_top">Submit</a>
     </fieldset>
   </form>
