--- a/views/mainpage/mainpage.ejs
+++ b/views/mainpage/mainpage.ejs
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
+      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
         <link rel="stylesheet" href="css/mainpage.css">
         <link rel="stylesheet" href="css/account.css">
+        <link rel="stylesheet" href="css/mercedes.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"/>
+        
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     </head>
     <body>
@@ -14,13 +17,13 @@
             <a href="#fourth"><i class="far fa-address-card"></i></a>
           </nav>
            
-         <div class= 'container'> 
+         <div class= 'containers'> 
            <section id= 'first'>
             <%- include('../account/account.ejs') %>
            </section>
            
            <section id= 'second'>
-             <h1>Second</h1>
+            <%- include('../mercedes/mercedes.ejs') %>
            </section>
            
           <section id= 'third'>
