updated mercedes listing page

--- a/views/mercedes/mercedes.ejs
+++ b/views/mercedes/mercedes.ejs
@@ -1,136 +1,80 @@
-<div class="container text-center">
-    <div class="shell">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-6">
-            <div class="wsk-cp-product">
-              <div class="wsk-cp-img">
-                <img src="https://3.bp.blogspot.com/-eDeTttUjHxI/WVSvmI-552I/AAAAAAAAAKw/0T3LN6jABKMyEkTRUUQMFxpe6PLvtcMMwCPcBGAYYCw/s1600/001-culture-clash-matthew-gianoulis.jpg" alt="Product" class="img-responsive" />
-              </div>
-              <div class="wsk-cp-text">
-                <div class="category">
-                  <span>Ethnic</span>
-                </div>
-                <div class="title-product">
-                  <h3>My face not my heart</h3>
-                </div>
-                <div class="description-prod">
-                  <p>Description Product tell me how to change playlist height size like 600px in html5 player. player good work now check this link</p>
-                </div>
-                <div class="card-footer">
-                  <div class="wcf-left"><span class="price">Rp500.000</span></div>
-                  <div class="wcf-right"><a href="#" class="buy-btn"><i class="zmdi zmdi-shopping-basket"></i></a></div>
-                </div>
-              </div>
-            </div>
+<div class="main">
+    <ul class="cards">
+      <li class="cards_item">
+        <div class="card">
+          <div class="card_image">
+            <span class="note">SUV</span>
+            <img src="assets/images/benz2.jpg" alt="mixed vegetable salad in a mason jar." />
+            <span class="card_price"><span>$</span>9</span>
           </div>
-          <div class="col-md-6">
-            <div class="wsk-cp-product">
-              <div class="wsk-cp-img"><img src="https://1.bp.blogspot.com/-b-2SgNUrFHg/WVSvmewWqgI/AAAAAAAAAK0/1K4YCcbYjhokHwV_IgiVJN9mEnQoWunIwCPcBGAYYCw/s1600/fashion-portrait-nicole-6347.jpg" alt="Product" class="img-responsive" /></div>
-              <div class="wsk-cp-text">
-                <div class="category">
-                  <span>Introvert</span>
-                </div>
-                <div class="title-product">
-                  <h3>My face not my heart</h3>
-                </div>
-                <div class="description-prod">
-                  <p>Description Product tell me how to change playlist height size like 600px in html5 player. player good work now check this link</p>
-                </div>
-                <div class="card-footer">
-                  <div class="wcf-left"><span class="price">Rp500.000</span></div>
-                  <div class="wcf-right"><a href="#" class="buy-btn"><i class="zmdi zmdi-shopping-basket"></i></a></div>
-                </div>
-              </div>
-            </div>
-          </div>        
-        </div>
-        <div class="row">
-          <div class="col-md-6">
-            <div class="wsk-cp-product">
-              <div class="wsk-cp-img">
-                <img src="https://3.bp.blogspot.com/-eDeTttUjHxI/WVSvmI-552I/AAAAAAAAAKw/0T3LN6jABKMyEkTRUUQMFxpe6PLvtcMMwCPcBGAYYCw/s1600/001-culture-clash-matthew-gianoulis.jpg" alt="Product" class="img-responsive" />
-              </div>
-              <div class="wsk-cp-text">
-                <div class="category">
-                  <span>Ethnic</span>
-                </div>
-                <div class="title-product">
-                  <h3>My face not my heart</h3>
-                </div>
-                <div class="description-prod">
-                  <p>Description Product tell me how to change playlist height size like 600px in html5 player. player good work now check this link</p>
-                </div>
-                <div class="card-footer">
-                  <div class="wcf-left"><span class="price">Rp500.000</span></div>
-                  <div class="wcf-right"><a href="#" class="buy-btn"><i class="zmdi zmdi-shopping-basket"></i></a></div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6">
-            <div class="wsk-cp-product">
-              <div class="wsk-cp-img"><img src="https://1.bp.blogspot.com/-b-2SgNUrFHg/WVSvmewWqgI/AAAAAAAAAK0/1K4YCcbYjhokHwV_IgiVJN9mEnQoWunIwCPcBGAYYCw/s1600/fashion-portrait-nicole-6347.jpg" alt="Product" class="img-responsive" /></div>
-              <div class="wsk-cp-text">
-                <div class="category">
-                  <span>Introvert</span>
-                </div>
-                <div class="title-product">
-                  <h3>My face not my heart</h3>
-                </div>
-                <div class="description-prod">
-                  <p>Description Product tell me how to change playlist height size like 600px in html5 player. player good work now check this link</p>
-                </div>
-                <div class="card-footer">
-                  <div class="wcf-left"><span class="price">Rp500.000</span></div>
-                  <div class="wcf-right"><a href="#" class="buy-btn"><i class="zmdi zmdi-shopping-basket"></i></a></div>
-                </div>
-              </div>
+          <div class="card_content">
+            <h2 class="card_title">Farmstand Salad</h2>
+            <div class="card_text">
+              <p>Dig into the freshest veggies of the season! This salad-in-a-jar features a mixture of
+                leafy greens and seasonal vegetables, fresh from the farmer's market.
+              </p>
+              <hr />
+              <p>Served with your choice of dressing on the side: <strong>housemade ranch</strong>, <strong>cherry balsamic
+                  vinaigrette</strong>, <strong>creamy chipotle</strong>, <strong>avocado green goddess</strong>, or <strong>honey mustard</strong>. Add your choice
+                of protein for $2 more.
+              </p>
             </div>
           </div>
         </div>
-        <div class="row">
-            <div class="col-md-6">
-                <div class="wsk-cp-product">
-                  <div class="wsk-cp-img"><img src="https://1.bp.blogspot.com/-XL_Ba-178Fo/WVSvm5AbApI/AAAAAAAAAK4/X5109HTqUiAhPjbmz4NFVHcpL7ZWe6T3ACPcBGAYYCw/s1600/wow-29.jpg" alt="Product" class="img-responsive" /></div>
-                  <div class="wsk-cp-text">
-                    <div class="category">
-                      <span>Beauty</span>
-                    </div>
-                    <div class="title-product">
-                      <h3>My face not my heart</h3>
-                    </div>
-                    <div class="description-prod">
-                      <p>Description Product tell me how to change playlist height size like 600px in html5 player. player good work now check this link</p>
-                    </div>
-                    <div class="card-footer">
-                      <div class="wcf-left"><span class="price">Rp500.000</span></div>
-                      <div class="wcf-right"><a href="#" class="buy-btn"><i class="zmdi zmdi-shopping-basket"></i></a></div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="col-md-6">
-                <div class="wsk-cp-product">
-                  <div class="wsk-cp-img"><img src="https://3.bp.blogspot.com/-iUes8qr4uC8/WVSvl6Wf_fI/AAAAAAAAAKs/JiTUUVvdbqEC_QGGaQhuVJiezIN3LIqEgCPcBGAYYCw/s1600/IMG_5367-bp.jpg" alt="Product" class="img-responsive" /></div>
-                  <div class="wsk-cp-text">
-                    <div class="category">
-                      <span>Drama</span>
-                    </div>
-                    <div class="title-product">
-                      <h3>My face not my heart cvf ggf gfg g</h3>
-                    </div>
-                    <div class="description-prod">
-                      <p>Description Product tell me how to change playlist height size like 600px in html5 player. player good work now check this link</p>
-                    </div>
-                    <div class="card-footer">
-                      <div class="wcf-left"><span class="price">Rp500.000</span></div>
-                      <div class="wcf-right"><a href="#" class="buy-btn"><i class="zmdi zmdi-shopping-basket"></i></a></div>
-                    </div>
-                  </div>
-                </div>
-              </div>
+      </li>
+  
+      <li class="cards_item">
+        <div class="card">
+          <div class="card_image">
+            <span class="note">GLC</span>
+            <img src="assets/images/benz3.jpg" alt="a Reuben sandwich on wax paper." />
+            <span class="card_price"><span>$</span>18</span>
+          </div>
+          <div class="card_content">
+            <h2 class="card_title">Ultimate Reuben</h2>
+            <div class="card_text">
+              <p>All great meals take time, but this one takes it to the next level! More than 650 hours
+                of fermenting, brining, aging, and curing goes into each and every one of our legendary
+                Reuben sandwiches.
+              </p>
+              <p>Every element of this extraordinary sandwich is handcrafted in our kitchens, from the rye
+                bread baked from our secret recipe to the cave-aged Swiss cheese, right down to the
+                pickle. The only thing we didn't make on the premises is the toothpick ( but we're
+                looking into how to do that).
+              </p>
+              <hr />
+              <p>This unforgettable sandwich has all of the classic Reuben elements: <strong>corned beef</strong>, <strong>rye
+                  bread</strong>, <strong>creamy Russian dressing</strong>, <strong>sauerkraut</strong>, plus a <strong>sweet gherkin pickle</strong>.
+                No substitions please!
+              </p>
+              <p>Add a side of <strong>french fries</strong> or <strong>sweet potato fries</strong> for $2 more, or our
+                <strong>housemade pub chips</strong> for $1.
+              </p>
+            </div>
+          </div>
         </div>
-      </div>
-    </div>
-    
+      </li>
+  
+      <li class="cards_item">
+        <div class="card">
+          <div class="card_image">
+            <span class="note">AMG</span>
+            <img src="assets/images/background.jpg" alt="A side view of a plate of figs and berries." />
+            <span class="card_price"><span>$</span>16</span>
+          </div>
+          <div class="card_content">
+            <h2 class="card_title">Fig &amp; Berry Plate</h2>
+            <div class="card_text">
+              <p>A succulent sextet of fresh figs join with a selection of bodacious seasonal berries in
+                this refreshing, shareable dessert.
+              </p>
+              <hr />
+              <p>Choose your drizzle: <strong>cherry-balsamic vinegar</strong>, <strong>local honey</strong>, or
+                <strong>housemade chocolate sauce</strong>.
+              </p>
+            </div>
+          </div>
+        </div>
+      </li>
+    </ul>
+  </div>
