--- a/public/css/mainpage.css
+++ b/public/css/mainpage.css
@@ -5,9 +5,7 @@
 }
 
 .body{
-    background-image: url("../assets/images/background.jpg");
-    background-repeat: no-repeat;
-    background-size: cover;
+    overflow-y: scroll;
 }
 
 :root {
@@ -23,8 +21,9 @@
   background: #191919;
   min-height: 100vh;
   font-family: Montserrat, sans-serif;
-  background-image: url("../assets/images/background.jpg");
   background-repeat: no-repeat;
+  background-image: url("../assets/images/background.jpg");
+  background-size: cover;
 }
 
 nav a {
