--- a/views/registration/registration.ejs
+++ b/views/registration/registration.ejs
@@ -11,26 +11,23 @@
             <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
           </head>
     </head>
-<form id="msform">
+<form id="msform" name="register" method="POST" action="/api/account">
     <!-- progressbar -->
 
     <!-- fieldsets -->
     <fieldset>
         <h2 class="fs-title">Personal Details</h2>
         <h3 class="fs-subtitle"></h3>
-        <input type="text" name="fname" placeholder="First Name" />
-        <input type="text" name="lname" placeholder="Last Name" />
-        <input type="text" name="mname" placeholder="Middle Name" />
-        <input type="text" name="phone" placeholder="Phone" />
-        <input type="text" name="deposit" placeholder="Initial Deposit" />
+        <input type="text" name="first_name" placeholder="First Name" />
+        <input type="text" name="last_name" placeholder="Last Name" />
+        <input type="text" name="middle_name" placeholder="Middle Name" />
       </fieldset>
 
     <fieldset>
       <h2 class="fs-title">Email and Password</h2>
       <h3 class="fs-subtitle"></h3>
       <input type="text" name="email" placeholder="Email" />
-      <input type="password" name="pass" placeholder="Password" />
-      <input type="password" name="cpass" placeholder="Confirm Password" />
+      <input type="password" name="password" placeholder="Password" />
       
     </fieldset>
     <fieldset>
@@ -38,10 +35,12 @@
       <h3 class="fs-subtitle"></h3>
       <input type="text" name="state" placeholder="State" />
       <input type="text" name="city" placeholder="City" />
-      <input type="text" name="streetname" placeholder="Street Name" />
-      <input type="text" name="zipcode" placeholder="zip Code" />
-      <a href="https://twitter.com/GoktepeAtakan" class="submit action-button" target="_top">Submit</a>
+      <input type="text" name="street_name" placeholder="Street Name" />
+      <input type="text" name="house_number" placeholder="House Number" />
+      <input type="text" name="zip_code" placeholder="zip Code" />
+      <input type="submit" class="submit action-button"/>
     </fieldset>
   </form>
+ 
 </htm>
 
