--- a/public/css/mainpage.css
+++ b/public/css/mainpage.css
@@ -18,11 +18,11 @@
 }
 
 .containers {
-  background: #191919;
   min-height: 100vh;
   font-family: Montserrat, sans-serif;
   background-repeat: no-repeat;
   background-image: url("../assets/images/background.jpg");
+  background-size: cover;
 }
 
 nav a {
