--- a/views/login/login.ejs
+++ b/views/login/login.ejs
@@ -12,14 +12,14 @@
     <div class="container">
       <div class="wrapper">
         <div class="title"><span>Login Form</span></div>
-        <form action="#">
+        <form  name="login" method="POST" action="/api/account/login">
           <div class="row">
             <i class="fas fa-user"></i>
-            <input type="text" placeholder="Email or Phone" required>
+            <input type="text" name="email" placeholder="Email" required>
           </div>
           <div class="row">
             <i class="fas fa-lock"></i>
-            <input type="password" placeholder="Password" required>
+            <input type="password" name="password" placeholder="Password" required>
           </div>
           <div class="pass"><a href="/forgot">Forgot password?</a></div>
           <div class="row button">
