scafolded various pages

--- a/public/css/mainpage.css
+++ b/public/css/mainpage.css
@@ -81,15 +81,18 @@ section:target h1 {
 #first {
   background:var(--primary-color);
 }
-#second {
+#addbranch {
     background: var(--complimentary-color);
 }
 
-#third {
+#profile {
     background: var(--contrast-color);
 }
 
 #fourth {
+    background: var(--light-color);
+}
+#fifth {
     background: var(--light-color);
 }
 
