--- a/views/account/account.ejs
+++ b/views/account/account.ejs
@@ -1,3 +1,4 @@
+<%- include('../mainpage/mainpage.ejs') %>
 <form id="msform" name="user" method="POST" action="api/account">
     <!-- progressbar -->
 
