--- a/views/mainpage/mainpage.ejs
+++ b/views/mainpage/mainpage.ejs
@@ -1,39 +1,25 @@
 <!DOCTYPE html>
 <html>
     <head>
+      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
+      <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.slim.min.js"></script>
+      <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-        <link rel="stylesheet" href="css/mainpage.css">
-        <link rel="stylesheet" href="css/account.css">
-        <link rel="stylesheet" href="css/mercedes.css">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"/>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+      <link rel="stylesheet" href="css/mainpage.css">
+      <link rel="stylesheet" href="css/account.css">
+      <link rel="stylesheet" href="css/mercedes.css">
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"/>
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+        
     </head>
     <body>
         <nav>
-            <a href="#first"><i class="far fa-user"></i></a>
-            <a href="#second"><i class="fas fa-briefcase"></i></a>
-            <a href="#third"><i class="far fa-file"></i></a>
-            <a href="#fourth"><i class="far fa-address-card"></i></a>
-          </nav>
-           
-         <div class= 'containers'> 
-          
-           <section id= 'first'>
-            <%- include('../account/account.ejs',{data:user_data}) %>
-            
-           </section>
-           
-           <section id= 'second'>
-            <%- include('../mercedes/mercedes.ejs') %>
-           </section>
-           
-          <section id= 'third'>
-            <h1>Third</h1>
-           </section>
-           
-          <section id= 'fourth'>
-            <h1>Fourth</h1>
-           </section>
-         </div>
+            <a href="/profile"><i class="far fa-user"></i></a>
+            <a href="/mercedes"><i class="fas fa-car"></i></a>
+            <a href="/purchase"><i class="fas fa-wallet"></i></a>
+            <a href="/branch"><i class="fas fa-code-branch"></i></a>
+            <a href="/addbranch"><i class="fas fa-plus"></i></a>
+          </nav>   
     </body>
 </html>
