--- a/views/mainpage/mainpage.ejs
+++ b/views/mainpage/mainpage.ejs
@@ -9,6 +9,7 @@
       <link rel="stylesheet" href="css/mainpage.css">
       <link rel="stylesheet" href="css/account.css">
       <link rel="stylesheet" href="css/mercedes.css">
+      <link rel="stylesheet" href="css/branch.css">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"/>
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
         
