--- a/views/mainpage/mainpage.ejs
+++ b/views/mainpage/mainpage.ejs
@@ -2,9 +2,6 @@
 <html>
     <head>
       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
-      <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.slim.min.js"></script>
-      <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
       <link rel="stylesheet" href="css/mainpage.css">
       <link rel="stylesheet" href="css/account.css">
@@ -12,7 +9,7 @@
       <link rel="stylesheet" href="css/branch.css">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"/>
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-        
+      
     </head>
     <body>
         <nav>
@@ -20,7 +17,9 @@
             <a href="/mercedes"><i class="fas fa-car"></i></a>
             <a href="/purchase"><i class="fas fa-wallet"></i></a>
             <a href="/branch"><i class="fas fa-code-branch"></i></a>
-            <a href="/addbranch"><i class="fas fa-plus"></i></a>
+            <a href="/managebranch"><i class="fas fa-house-user"></i></a>
+            <a href="/addmanager"><i class="fas fa-user-plus"></i></a>
           </nav>   
     </body>
+    
 </html>
