upload mercedes images

--- a/views/account/account.ejs
+++ b/views/account/account.ejs
@@ -1,4 +1,4 @@
-<%- include('../mainpage/mainpage.ejs') %>
+<%- include('../mainpage/mainpage.ejs',{user_email:user_email}) %>
 <form id="msform" name="user" method="POST" action="api/account">
     <!-- progressbar -->
 
