--- a/views/branch/managebranch.ejs
+++ b/views/branch/managebranch.ejs
@@ -1,30 +1,227 @@
 <%- include('../mainpage/mainpage.ejs') %>
-<!-- Button trigger modal -->
-<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
-  Launch demo modal
-</button>
+<% if(branch_id != null){ %>
+<div class="row" style="margin-left: 100px;">
+    <div class="col-md-11 col-lg-11">
+        <div class="main">
+            <ul class="cards">
+            <% for(const key in mercedes){ %> 
+              <li class="cards_item">
+                <div class="card">
+                  <div class="card_image">
+                   <% if(mercedes[key].length==1){%>
+                    <div class="row">      
+                      <img src="assets/images/logo.jpg" alt="No images Yet" />                                                   
+                    </div>
+                    
+                    <%}else{%>
+                      <div class="row" style="padding-bottom: 30px;">
+                        <% for(i in mercedes[key]){ %>
+                          <div class="col-md-6 col-lg-6" style="margin-bottom:0%;padding: 0%;height: 130px;">
+                            <img src="assets/images/<%- mercedes[key][i]['image_path'] %>"  alt="image"/>
+                          </div>
+                          <%}%>                                            
+                      </div>
+                    <%}%>
+                  </div>
+                  <div class="card_content">
+                    <h2 class="card_title"></h2>
+                    <div class="card_text">
+                        <div class="row">                   
+                            <p class="col-6"><i class="fas fa-car icon"></i></p>
+                            <p class="col-6 badge branch"><%- mercedes[key][0]['vin_number'] %></p>                  
+                        </div>
+                        <div class="row">
+                            <p class="col-6"> <i class="fas fa-user icon"></i></p>
+                            <p class="col-6 branch"></p>
+                        </div>
+                      <hr />
+                      <div class="row">
+                        <p class="col-6"><i class="fas fa-road icon"></i></p>
+                        <p class="col-6 branch"> </p>
+                     </div>
+                     <div class="row">
+                        <p class="col-6"><i class="fas fa-city icon"></i></p>
+                        <p class="col-6 branch">  </p>
+                     </div>
+                     <div class="row">
+                        <p class="col-6"><i class="fas fa-flag-usa icon"></i></p>
+                        <p class="col-6 branch">  </p>
+                     </div>
+                     <div class="row">
+                        <p class="col-6"><i class="fas fa-code icon"></i></p>
+                        <p class="col-6 branch"> </p>
+                     </div>
+                      <div class="row">
+                        <form name="Upload" method="POST" action="api/mercedes/upload" enctype="multipart/form-data">
+                          <div class="col-md-10 col-lg-10 mt-2" style="margin-bottom: 20px;">
+                            <div class="input-group">
+                              <div class="input-group-prepend">
+                                <span class="input-group-text" style="background-color: #c89b3f;color: white;" id="inputGroupFileAddon01">Images</span>
+                              </div>
+                              <div class="custom-file">
+                                <input type="file" name="files"  class="custom-file-input" multiple id="inputGroupFile01"
+                                  aria-describedby="inputGroupFileAddon01">
+                                <label class="custom-file-label" for="inputGroupFile01">Choose Images</label>
+                              </div>
+                              <div class="col-md-2 col-lg-2">
+                                <input hidden type="text" name="vin_number" value="<%- mercedes[key][0]['vin_number'] %>"/>
+                                <input type="submit" class="btn" value="upload" style="background-color: #c89b3f;color: white;" />
+                              </div>
+                          </div>     
+                        </form>
+                      </div>
+                     </div>
+                    </div>
+                  </div>
+                </div>
+              </li>
+              <% } %>
+            </ul>
+        </div>
+    </div>
+    <div class="col-md-1 col-lg-1">
+        <button type="button" class="btn btn-dark" style="margin-top: 20px;" data-toggle="modal" data-target="#exampleModal">
+            <i class="fa fa-plus"></i>
+          </button>
+    </div>
+    
+</div> <%}%>
 
-<!-- Modal -->
+
+
+
 <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog modal-lg modal-dialog-centered modal-dialog-scrollable">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        ...
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
+    <div class="modal-dialog modal-lg modal-dialog-centered modal-dialog-scrollable">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Add Mercedes</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+            <form id="msform"  name="addMercedes" method="POST" action="/api/mercedes" style="width: 100%;">
+                <!-- progressbar -->
+                <!-- fieldsets -->
+                <!-- <fieldset style="width: 100%;margin-left: 0%;">
+                    <div class="input-group mb-3">
+                    <div class="input-group-prepend">
+                        <label class="input-group-text" for="inputGroupSelect01">Manager</label>
+                    </div>
+                    <% var data =[]; if (data.length != 0 ) {%>
+                    <select name="email" class="custom-select" id="inputGroupSelect01">
+                        <% for(manager in data){ %>
+                            <option value="<%= data[manager] %>"><%= data[manager] %></option>
+                        <% } %>
+                    </select>
+                    <% }  %>
+                    </div>
+                </fieldset> -->
+                <fieldset style="width: 100%;margin-left: 0%;">
+                  <div class="row">
+                    <div class="col-lg-6 col-md-6 "><input type="text"   required name="vin_number" placeholder="Vin Number" /></div>
+                    <div class="col-lg-6 col-md-6"><input type="text" required name="model" placeholder="Model" /></div>
+                  </div>
+                    <div class="row">
+                      <div class="col-md-4 col-lg-4">
+                        <div class="input-group mb-3">
+                          <div class="input-group-prepend">
+                              <label class="input-group-text" for="inputGroupSelect01">Color</label>
+                          </div>
+                          <select name="color" required class="custom-select" id="inputGroupSelect01">                            
+                                  <option value="black">Black</option> 
+                                  <option value="red">Red</option>  
+                                  <option value="blue">Blue</option>  
+                                  <option value="grey">Grey</option>                        
+                          </select>
+                        </div> 
+                      </div> 
+                      <div class="col-md-4 col-lg-4">
+                        <div class="input-group mb-3">
+                          <div class="input-group-prepend">
+                              <label class="input-group-text" for="inputGroupSelect01">Transmission</label>
+                          </div>
+                          <select name="transmission" required class="custom-select" id="inputGroupSelect01">                            
+                                  <option value="automatic">Automatic</option> 
+                                  <option value="manual">Manual</option>                            
+                          </select>
+                        </div>  
+                      </div>  
+                      <div class="col-md-4 col-lg-4">
+                        <div class="input-group mb-3">
+                          <div class="input-group-prepend">
+                              <label class="input-group-text" for="inputGroupSelect01">Drive</label>
+                          </div>
+                          <select name="drive" required class="custom-select" id="inputGroupSelect01">                            
+                                  <option value="4wd">4wd</option> 
+                                  <option value="fwd">fwd</option>                            
+                          </select>
+                        </div> 
+                      </div>                   
+                    </div>
+                    <div class="row">
+                      <div class="col-md-4 col-lg-4">
+                        <div class="input-group mb-3">
+                          <div class="input-group-prepend">
+                              <label class="input-group-text" for="inputGroupSelect01">Fuel</label>
+                          </div>
+                          <select name="fuel" required class="custom-select" id="inputGroupSelect01">                            
+                                  <option value="gas">Gas</option> 
+                                  <option value="electric">Electric</option>                            
+                          </select>
+                        </div>  
+                      </div>  
+                      <div class="col-md-4 col-lg-4">
+                        <div class="input-group mb-3">
+                          <div class="input-group-prepend">
+                              <label class="input-group-text" for="inputGroupSelect01">Cylinders</label>
+                          </div>
+                          <select name="number_of_cylinders" required class="custom-select" id="inputGroupSelect01">                            
+                                  <option value="1">1</option> 
+                                  <option value="2">2</option>  
+                                  <option value="3">3</option>  
+                                  <option value="4">4</option>                        
+                          </select>
+                        </div> 
+                      </div>   
+                      <div class="col-md-4 col-lg-4">
+                        <div class="input-group mb-3">
+                          <div class="input-group-prepend">
+                              <label class="input-group-text" for="inputGroupSelect01">Year</label>
+                          </div>
+                          <select name="_year" required class="custom-select" id="inputGroupSelect01">                            
+                                  <option value="1">2023</option> 
+                                  <option value="2">2022</option>  
+                                  <option value="3">2021</option>  
+                                  <option value="4">2020</option>                        
+                          </select>
+                        </div> 
+                      </div>                 
+                    </div>
+                    <div class="row">
+                      <div class="col-md-6 col-lg-6"><input type="text" required name="mileage" placeholder="Mileage" /> </div>
+                      <div class="col-md-6 col-lg-6"><input type="number" required name="price" placeholder="Price" /></div>                    
+                    </div>
+                    <!-- <div class="row">
+                      <div class="input-group">
+                        <div class="input-group-prepend">
+                          <span class="input-group-text" id="inputGroupFileAddon01">Upload</span>
+                        </div>
+                        <div class="custom-file">
+                          <input type="file" class="custom-file-input" multiple id="inputGroupFile01"
+                            aria-describedby="inputGroupFileAddon01">
+                          <label class="custom-file-label" for="inputGroupFile01">Choose Images</label>
+                        </div>
+                      </div>
+                    </div> -->
+                    <input name="branch_id" hidden value="<%- branch_id %>" />
+                    <input type="submit" class="submit action-button"/>
+                </fieldset>
+            </form>
+        </div>
       </div>
     </div>
   </div>
-</div>
 <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
-
